--- a/.github/workflows/check-commits-count.yml
+++ b/.github/workflows/check-commits-count.yml
@@ -15,6 +15,8 @@ jobs:
       with:
         fetch-depth: '0'
     - name: Check commits count
+      if: (git rev-list --count origin/master..HEAD --first-parent) > 1
       run: |
-        echo "first_parent:$(git rev-list origin/master HEAD --count --first-parent)"
-        echo "normal:$(git rev-list origin/master HEAD --count)"
+        echo "first_parent:$(git rev-list --count origin/master..HEAD --first-parent)"
+        echo "normal:$(git rev-list --count origin/master..HEAD)"
+        exit 1
