--- a/.github/workflows/check-commits-count.yml
+++ b/.github/workflows/check-commits-count.yml
@@ -15,10 +15,11 @@ jobs:
       with:
         fetch-depth: '0'
     - name: Check commits count
+      id: check_count
       run: |
         git rev-list --count origin/master..HEAD --first-parent
     - name: Check condution
-      if: ${{steps.run_tests.outputs.*}} > 1
+      if: ${{steps.check_count.outputs.*}} > 1
       run: |
         echo "first_parent:$(git rev-list --count origin/master..HEAD --first-parent)"
         echo "normal:$(git rev-list --count origin/master..HEAD)"
