--- a/.github/workflows/check-commits-count.yml
+++ b/.github/workflows/check-commits-count.yml
@@ -17,7 +17,7 @@ jobs:
     - name: Check commits count
       id: check_count
       run: |
-        git rev-list --count origin/master..HEAD --first-parent
+        echo "$(git rev-list --count origin/master..HEAD --first-parent)"
     - name: Check condution
       if: ${{steps.check_count.outputs.stdout}} > 1
       run: |
