--- a/.github/workflows/check-commits-count.yml
+++ b/.github/workflows/check-commits-count.yml
@@ -17,11 +17,11 @@ jobs:
     - name: Check commits count
       id: check_count
       run: |
-        echo "SELECTED_COLOR=$(git rev-list --count origin/master..HEAD --first-parent)" >> $GITHUB_OUTPUT
+        echo "COMMITS_COUNT=$(git rev-list --count origin/master..HEAD)" >> $GITHUB_OUTPUT
     - name: Check condution
-      if: ${{steps.check_count.outputs.SELECTED_COLOR > 1}}
+      if: ${{steps.check_count.outputs.COMMITS_COUNT > 1}}
       run: |
         echo "first_parent:$(git rev-list --count origin/master..HEAD --first-parent)"
         echo "normal:$(git rev-list --count origin/master..HEAD)"
-        echo "condution:${{steps.check_count.outputs.SELECTED_COLOR}}"
+        echo "condution:${{steps.check_count.outputs.COMMITS_COUNT}}"
         exit 1
