--- a/.github/workflows/squash-commits.yml
+++ b/.github/workflows/squash-commits.yml
@@ -18,7 +18,7 @@ jobs:
         fetch-depth: '0'
     - name: Squash commmits in PR
       run: |
-        git config user.name "Github Actions Bot"
+        git config user.name "${{github.event.pull_request.user.login}}"
         git config user.email "< >"
         git reset $(git merge-base origin/master HEAD)
         git status
