--- a/.github/workflows/squash-commits.yml
+++ b/.github/workflows/squash-commits.yml
@@ -29,7 +29,7 @@ jobs:
         git add -A
         git commit -m "${{ github.event.pull_request.title }}"
     - name: Push to origin
-      run: git push origin HEAD:${{ github.head_ref || github.ref_name }} --force
+      run: git push origin ${{ github.head_ref || github.ref_name }} --force
     # - run: exit 0
     - name: 'Remove label squash'
       uses: actions/github-script@v6
@@ -42,4 +42,4 @@ jobs:
               repo: context.repo.repo,
               name: ["squash"]
             })
-          }, 70000)
+          }, 10000)
