--- a/.github/workflows/squash-commits.yml
+++ b/.github/workflows/squash-commits.yml
@@ -22,6 +22,7 @@ jobs:
         git config user.email "$(git log -n 1 --pretty=format:%ae)"
     - name: Reset history
       run: |
+        git switch ${{ github.head_ref }}
         git reset $(git merge-base origin/master HEAD)
         git status
     - name: Make a commit 
@@ -29,7 +30,7 @@ jobs:
         git add -A
         git commit -m "${{ github.event.pull_request.title }}"
     - name: Push to origin
-      run: git push origin ${{ github.head_ref || github.ref_name }} --force
+      run: git push origin origin/${{ github.head_ref || github.ref_name }} --force
     # - run: exit 0
     - name: 'Remove label squash'
       uses: actions/github-script@v6
