--- a/.github/workflows/pull-request-name-check.yml
+++ b/.github/workflows/pull-request-name-check.yml
@@ -3,7 +3,7 @@ name: PR name validation
 on:
   pull_request:
     branches: [ master ]
-    types: [opened, edited, synchronize, reopened]
+    types: [ opened, edited, synchronize, reopened, ready_for_review ]
 
    
 jobs:
@@ -13,7 +13,7 @@ jobs:
     steps:
     - uses: deepakputhraya/action-pr-title@master
       with:
-        regex: '(^TL\-[0-9]{2,8}\s)|(TEMP\s)|(FIX\s)' # Regex the title should match.
+        regex: '(^TL\-[0-9]{2,8}\s[a-zA-Z0-9]{1,})|(TEMP\s)|(FIX\s)' # Regex the title should match.
         # allowed_prefixes: 'TL-' # title should start with the given prefix
         # disallowed_prefixes: 'tl' # title should not start with the given prefix
         prefix_case_sensitive: true # title prefix are case insensitive
