--- a/.github/workflows/squash-commits.yml
+++ b/.github/workflows/squash-commits.yml
@@ -1,11 +1,9 @@
 name: Squash commits in branch
 
 on:
-  # workflow_dispatch
   pull_request:
     types: [ labeled ]
     branches: [ master ]
-    # types: [ opened, synchronize, edited, ready_for_review ]
 
 jobs:
   squash-commits:
@@ -16,12 +14,29 @@ jobs:
       uses: actions/checkout@v3
       with:
         fetch-depth: '0'
-    - name: Squash commmits in PR
+        persist-credentials: false
+    - name: Config author
       run: |
-        git config user.name "${{github.event.pull_request.user.login}}"
-        git config user.email "< >"
+        git config --local user.name "${{github.event.pull_request.user.login}}"
+        git config --local user.email "$(git log -n 1 --pretty=format:%ae)"
+    - name: Reset history
+      run: |
+        git switch ${{ github.head_ref }}
         git reset $(git merge-base origin/master HEAD)
         git status
+    - name: Make a commit 
+      run: |
         git add -A
         git commit -m "${{ github.event.pull_request.title }}"
-        git push origin HEAD:${{ github.head_ref || github.ref_name }} --force
+    - name: Push changes
+      uses: ad-m/github-push-action@master
+      with:
+        github_token: ${{ secrets.PERSONAL_GITHUB_TOKEN }}
+        branch: ${{ github.head_ref }}
+        force: true
+    - name: removelabel
+      uses: buildsville/add-remove-label@v2.0.0
+      with:
+        token: ${{secrets.GITHUB_TOKEN}}
+        labels: squash
+        type: remove
