--- a/.github/workflows/pull-request-name-check.yml
+++ b/.github/workflows/pull-request-name-check.yml
@@ -1,13 +1,12 @@
-name: PR name validation
+name: PR validation
 
 on:
   pull_request:
-    branches: [ master ]
-    types: [ opened, edited, synchronize, reopened, ready_for_review ]
+    branches: [ dev ]
+    types: [ opened, synchronize, edited, reopened, ready_for_review ]
 
-   
 jobs:
-  name-validation:
+  title-validation:
     runs-on: ubuntu-latest
     
     steps:
@@ -20,3 +19,14 @@ jobs:
         min_length: 5 # Min length of the title
         # max_length: 20 # Max length of the title
         github_token: ${{ github.token }} # Default: ${{ github.token }}
+  
+  branch-naming-rules:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: deepakputhraya/action-branch-name@master
+        with:
+          regex: '(^TL\-[0-9]{2,8})|(temp[0-9a-zA-Z\-_]*)|(fix[0-9a-zA-Z\-_]*)' # Regex the branch should match. This example enforces grouping
+          #  allowed_prefixes: 'feature,stable,fix' # All
+          ignore: master,dev,stage,staging # Ignore exactly matching branch names from convention
+          min_length: 5 # Min length of the branch name
+          max_length: 30 # Max length of the branch name
