--- a/.github/workflows/pull-request-name-check.yml
+++ b/.github/workflows/pull-request-name-check.yml
@@ -12,7 +12,7 @@ jobs:
     steps:
     - uses: deepakputhraya/action-pr-title@master
       with:
-        regex: '(^TL\-[0-9]{2,8}\s[a-zA-Z0-9]{1,})|(TEMP\s)|(FIX\s)' # Regex the title should match.
+        regex: '(^TL\-[0-9]{2,8}\s[a-zA-Z0-9]{1,})|(^TEMP\s)|(^FIX\s)' # Regex the title should match.
         # allowed_prefixes: 'TL-' # title should start with the given prefix
         # disallowed_prefixes: 'tl' # title should not start with the given prefix
         prefix_case_sensitive: true # title prefix are case insensitive
@@ -25,7 +25,7 @@ jobs:
     steps:
       - uses: deepakputhraya/action-branch-name@master
         with:
-          regex: '(^TL\-[0-9]{2,8})|(temp[0-9a-zA-Z\-_]*)|(fix[0-9a-zA-Z\-_]*)' # Regex the branch should match. This example enforces grouping
+          regex: '(^TL\-[0-9]{2,8})|(^temp[0-9a-zA-Z\-_]*)|(^fix[0-9a-zA-Z\-_]*)' # Regex the branch should match. This example enforces grouping
           #  allowed_prefixes: 'feature,stable,fix' # All
           ignore: master,dev,stage,staging # Ignore exactly matching branch names from convention
           min_length: 5 # Min length of the branch name
