--- a/.github/workflows/pull-request-name-check.yml
+++ b/.github/workflows/pull-request-name-check.yml
@@ -25,7 +25,7 @@ jobs:
     steps:
       - uses: deepakputhraya/action-branch-name@master
         with:
-          regex: '(^TL\-[0-9]{2,8})|(^temp[0-9a-zA-Z\-_]*)|(^fix[0-9a-zA-Z\-_]*)' # Regex the branch should match. This example enforces grouping
+          regex: '(^TL\-[0-9]{2,8}$)|(^temp[0-9a-zA-Z\-_]*)|(^fix[0-9a-zA-Z\-_]*)' # Regex the branch should match. This example enforces grouping
           #  allowed_prefixes: 'feature,stable,fix' # All
           ignore: master,dev,stage,staging # Ignore exactly matching branch names from convention
           min_length: 5 # Min length of the branch name
