--- a/.github/workflows/push-to-master.yml
+++ b/.github/workflows/push-to-master.yml
@@ -19,11 +19,11 @@ jobs:
           ref: ${{ github.ref }}
       - name: 'cat package.json'
         run: cat ./package.json
-      - name: 'Automated Version Bump'
+      - name: 'Version Bump'
         id: version-bump
         uses: 'phips28/gh-action-bump-version@master'
         with:
-          commit-message: 'CI: bumps version to {{version}}'
+          commit-message: '{{version}}'
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: 'cat package.json'
