--- a/.github/workflows/pull-request-name-check.yml
+++ b/.github/workflows/pull-request-name-check.yml
@@ -8,7 +8,7 @@ on:
 jobs:
   update_pr:
     runs-on: ubuntu-latest
-    if: ${{ !contains(github.head_ref, 'temp') || !contains(github.head_ref, 'dev_') }}
+    if: ${{ !contains(github.head_ref, 'temp') && !contains(github.head_ref, 'dev_') }}
     steps:
     - uses: tzkhan/pr-update-action@v2
       with:
@@ -26,9 +26,9 @@ jobs:
 
   title-validation:
     runs-on: ubuntu-latest
+    if: ${{ !contains(github.head_ref, 'temp') && !contains(github.head_ref, 'dev_') }}
     steps:
     - uses: deepakputhraya/action-pr-title@master
-      if: ${{ !contains(github.head_ref, 'temp') || !contains(github.head_ref, 'dev_') }}
       with:
         regex: '(^TL\-[0-9]{2,8}\s[a-zA-Z0-9]{1,})|(^TEMP\s)|(^FIX\s)' # Regex the title should match.
         # allowed_prefixes: 'TL-' # title should start with the given prefix
@@ -40,9 +40,9 @@ jobs:
   
   branch-naming-rules:
     runs-on: ubuntu-latest
+    if: ${{ !contains(github.head_ref, 'temp') && !contains(github.head_ref, 'dev_') }}
     steps:
       - uses: deepakputhraya/action-branch-name@master
-        if: ${{ !contains(github.head_ref, 'temp') || !contains(github.head_ref, 'dev_') }}
         with:
           regex: '(^TL\-[0-9]{2,8}$)|(^temp[0-9a-zA-Z\-_]*)|(^dev[0-9a-zA-Z\-_]*)' # Regex the branch should match. This example enforces grouping
           #  allowed_prefixes: 'feature,stable,fix' # All
