send empty string for tag prefix

--- a/.github/workflows/bump-version-to-master.yml
+++ b/.github/workflows/bump-version-to-master.yml
@@ -24,7 +24,7 @@ jobs:
         uses: 'phips28/gh-action-bump-version@master'
         with:
           commit-message: '{{version}}'
-          tag-prefix:  'v'
+          tag-prefix:  ''
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: 'cat package.json'
